--- a/css/style.css
+++ b/css/style.css
@@ -37,16 +37,25 @@
     list-style: none;
 }
 
+.to_do_information {
+    overflow-y: scroll;
+    height: 70vh;
+}
+
 .to_do_information li{
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     justify-content: center;
     align-items: center;
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(0, 0, 0, 0.56);
     gap: 15px;
     height: 50px;
     border-radius: 50px;
+    width: 400px;
+}
+.to_do_information li p {
+    background: none;
 }
 
 .input_container {
@@ -55,12 +64,23 @@
 }
 
 button {
+    display: flex;
+    align-items: center;
     background-color: #fff;
     color: #000;
+    border-radius: 100%;
+    height: 45px;
+}
+
+button:hover {
+    filter: invert(1);
 }
 
 .Gotthis {
     height: 31px;
+    display: flex;
+    align-items: center;
+    border-radius: 0%;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
 
@@ -69,7 +89,8 @@ button {
 .placeholder_bar {
     width: 500px;
     height: 25px;
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(0, 0, 0, 0.56);
     border-top-left-radius: 15px;
     border-bottom-left-radius: 15px;
+    color: #fff;
 }
