--- a/css/style.css
+++ b/css/style.css
@@ -107,3 +107,8 @@ button.trash_button {
     margin-left: 10px;
     padding: 5px 10px;
 }
+
+.completed {
+    text-decoration: line-through;
+    color: #aaaaaa42;
+}
